# openapi-validator-cli

./: .gitignore  .oavc  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
Formula/: oav.rb
assets/generators/client/: csharp.yaml  go.yaml  java.yaml  kotlin.yaml  python.yaml  typescript-axios.yaml  typescript-fetch.yaml  typescript-node.yaml
assets/generators/server/: aspnetcore.yaml  go-server.yaml  kotlin-spring.yaml  python-fastapi.yaml  spring.yaml  typescript-nestjs.yaml
src/: cli.rs  config.rs  docker.rs  lib.rs  output.rs  util.rs
src/steps/: compile.rs  generate.rs  lint.rs  mod.rs  report.rs
tests/: cli.rs
tests/fixtures/: inheritance.yml  invalid.yml  valid.yml
