[package]
name = "openapi-validator"
version = "0.1.0"
edition = "2021"
description = "OpenAPI Validator CLI for linting, generating, and compiling OpenAPI specs locally"
license = "MIT"
repository = "https://github.com/entur/openapi-validator"
rust-version = "1.74"
default-run = "openapi-validator"

[[bin]]
name = "oav"
path = "src/bin/oav.rs"

[dependencies]
anyhow = "1.0.95"
atty = "0.2.14"
clap = { version = "4.5.32", features = ["derive"] }
include_dir = "0.7.4"
indicatif = "0.17.11"
libc = "0.2.153"
owo-colors = "4.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3.12.0"
